--- a/views/students.hbs
+++ b/views/students.hbs
@@ -1,4 +1,8 @@
-
+<style>
+table, th, td {
+  border:1px solid black;
+}
+</style>
         <table class="table">
             <thead>
                 <tr>
